--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "pagarme-js",
   "main": "lib/pagarme.js",
   "dependencies": {
+    "merge": "~1.x",
     "node-rsa": "~0.1.53",
     "request": "~2.x",
-    "merge": "~1.x"
+    "sha1": "^1.1.0"
   },
   "devDependencies": {},
   "scripts": {
